# mpiP_playground

./: .gitignore  CMakeLists.txt  FV_advection_2d_size_2.h5  FV_advection_2d_size_2.xdmf  FV_advection_2d_size_2_init.h5  FV_advection_2d_size_2_init.xdmf  README.md  burgers_2D_size_2.h5  burgers_2D_size_2.xdmf  burgers_2D_size_2_ite_0.h5  burgers_2D_size_2_ite_0.xdmf  burgers_2D_size_2_ite_1.h5  burgers_2D_size_2_ite_1.xdmf  burgers_2D_size_2_ite_10.h5  burgers_2D_size_2_ite_10.xdmf  burgers_2D_size_2_ite_11.h5  burgers_2D_size_2_ite_11.xdmf  burgers_2D_size_2_ite_12.h5  burgers_2D_size_2_ite_12.xdmf  burgers_2D_size_2_ite_13.h5  burgers_2D_size_2_ite_13.xdmf  burgers_2D_size_2_ite_14.h5  burgers_2D_size_2_ite_14.xdmf  burgers_2D_size_2_ite_15.h5  burgers_2D_size_2_ite_15.xdmf  burgers_2D_size_2_ite_16.h5  burgers_2D_size_2_ite_16.xdmf  burgers_2D_size_2_ite_17.h5  burgers_2D_size_2_ite_17.xdmf  burgers_2D_size_2_ite_2.h5  burgers_2D_size_2_ite_2.xdmf  burgers_2D_size_2_ite_3.h5  burgers_2D_size_2_ite_3.xdmf  burgers_2D_size_2_ite_4.h5  burgers_2D_size_2_ite_4.xdmf  burgers_2D_size_2_ite_5.h5  burgers_2D_size_2_ite_5.xdmf  burgers_2D_size_2_ite_6.h5  burgers_2D_size_2_ite_6.xdmf  burgers_2D_size_2_ite_7.h5  (+6 more)
scripts/: run_samurai_demo.sh
src/: main.cpp
src/nested/: communication.cpp  communication.h  main.cpp  pipeline.cpp  pipeline.h  workers.cpp  workers.h
src/simple/: pipeline.cpp  pipeline.h  workload.cpp  workload.h
